BlockList Query refactoring to allow an external dns client